# r2cn-mentor-link

./: Cargo.toml  Dockerfile
.github/workflows/: api-deploy.yml
api/: Cargo.toml
api/src/: confernece_router.rs  email.rs  main.rs  task_router.rs
api/src/model/: task.rs
api/templates/: score_count_email.html
entity/src/: student.rs  task.rs
migration/src/: lib.rs  m20250222_082628_alter_task.rs
service/src/ospp/: mod.rs
service/src/storage/: student_stg.rs
