[workspace]
members = [".", "api", "service", "entity", "migration", "common"]
resolver = "2"
default-members = ["api", "migration"]


[workspace.dependencies]
api = { path = "api" }
entity = { path = "entity" }
migration = { path = "migration" }
service = { path = "service" }
common = { path = "common"}

tokio = "1.43.0"
sea-orm = "1.1.5"
axum = "0.8.1"
tower = "0.5.2"
tower-http = "0.6.2"
tower-cookies = "0.11.0"
anyhow = "1.0.95"
dotenvy = "0.15.7"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
async-trait = "0.1"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
rand = "0.9.0"
reqwest = "0.12.12"
base64 = "0.22.1"
thiserror = "2.0"
rust_xlsxwriter = "0.84"
percent-encoding = "2.3.1"
lettre = "0.11"
tera = "1.20"