[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mentor-link-api"
path = "src/main.rs"

[dependencies]
service = { workspace = true }
entity = { workspace = true }
migration = { workspace = true }
common = { workspace = true }

tokio = { workspace = true, features = ["full"] }
sea-orm = { workspace = true, features = [
    # "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
] }
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
tower-cookies = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
base64 = { workspace = true }
rust_xlsxwriter = { workspace = true }
percent-encoding = { workspace = true }
lettre = { workspace = true }
tera = { workspace = true }
